--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2013-09-03  Yue Lu  <hacklu.newborn@gmail.com>
+
+	* configure.tgt: Set build_gdbserver=yes for GNU/Hurd
+	hosts.
+	* configure: Regenerate.
+
 2013-06-18  Doug Evans  <dje@google.com>
 
 	* dwarf2read.c (dw2_symtab_iter_next): Check value of cu_index
